--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "4.14.1",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.12"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
